# GenePi

./: README.md  pyproject.toml
.github/workflows/: python-app.yml
UnitTest/: test_init.py
UnitTest/refData/: test_roulette_wheel_selection.npy  test_tournament_selection.npy
src/: genepiOptimizer.py
src/utils/: combinator.py  mutator.py  pareto.py  selector.py
src/utils/CrossOver/: combinator.py
utils/Selection/: selector.py
